third_party/llvm-project/clang/test/CXX/over/over.match/over.match.best/over.best.ics/over.ics.scs/p3.cpp
// RUN: %clang_cc1 -std=c++1z -verify %s

void f(void() noexcept); // expected-note {{no known conversion from 'void ()' to 'void (*)() noexcept'}}
void f(void()) = delete; // expected-note {{explicitly deleted}}

void g();
void h() noexcept;

void test() {
  f(g); // expected-error {{call to deleted}}
  f(h);
}
